--- a/man/figures/tables/jfaHypergeometricSampleSizes.Rmd
+++ b/man/figures/tables/jfaHypergeometricSampleSizes.Rmd
@@ -32,7 +32,7 @@ library(jfa)
 
 ```{r, include = F}
 
-confidence <- 0.90
+conf.level <- 0.90
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
@@ -42,11 +42,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 100)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -83,7 +83,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.90
+conf.level <- 0.90
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
@@ -93,11 +93,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 500)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -134,7 +134,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.90
+conf.level <- 0.90
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
@@ -144,11 +144,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 1000)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -185,7 +185,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.95
+conf.level <- 0.95
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.10, 0.0025)
 
@@ -195,11 +195,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 100)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -236,7 +236,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.95
+conf.level <- 0.95
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.10, 0.0025)
 
@@ -246,11 +246,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 500)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -287,7 +287,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.95
+conf.level <- 0.95
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.10, 0.0025)
 
@@ -297,11 +297,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 1000)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -338,7 +338,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.975
+conf.level <- 0.975
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
@@ -348,11 +348,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 100)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -389,7 +389,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.975
+conf.level <- 0.975
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
@@ -399,11 +399,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 500)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -440,7 +440,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.975
+conf.level <- 0.975
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
@@ -450,11 +450,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 1000)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -491,7 +491,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.99
+conf.level <- 0.99
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
@@ -501,11 +501,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 100)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -542,7 +542,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.99
+conf.level <- 0.99
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
@@ -552,11 +552,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 500)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
@@ -593,7 +593,7 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.99
+conf.level <- 0.99
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
@@ -603,11 +603,11 @@ for(rows in 1:length(expected)){
     if(expected[rows] >= m[columns]){
       next
     } else {
-      p <- try({ suppressMessages(ss <- jfa::planning(confidence, expectedError = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N = 1000)) }, silent = T)
+      p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
       if(class(p) == "try-error"){
         next 
       }
-      tab[rows, columns] <- paste0(ss$sampleSize, " (", ss$expectedSampleError, ")")
+      tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
   }
 }
