--- a/man/figures/tables/jfaHypergeometricBayesFactors.Rmd
+++ b/man/figures/tables/jfaHypergeometricBayesFactors.Rmd
@@ -41,8 +41,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.10, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.10, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.10, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -93,8 +92,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.10, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.10, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.10, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -145,8 +143,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.10, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.10, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.10, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -199,8 +196,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.05, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.05, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.05, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -251,8 +247,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.05, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.05, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.05, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -303,8 +298,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.05, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.05, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.05, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -355,8 +349,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.02, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.02, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.02, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -407,8 +400,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.02, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.02, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.02, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -459,8 +451,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.02, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.02, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.02, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -511,8 +502,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.02, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.01, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.01, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -563,8 +553,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.01, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.01, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.01, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
@@ -615,8 +604,7 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      tab[rows, columns] <- auditBF(materiality = 0.01, n = n[rows], x = k[columns], 
-                                    likelihood = "hypergeometric", N.units = N)
+      tab[rows, columns] <- evaluation(materiality = 0.01, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.01, likelihood = 'hypergeometric', N.units = N))
   }
 }
 
