--- a/man/figures/tables/jfaPoissonBayesFactors.Rmd
+++ b/man/figures/tables/jfaPoissonBayesFactors.Rmd
@@ -38,8 +38,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-      tab[rows, columns] <- auditBF(materiality = 0.10, n = n[rows], x = k[columns], 
-                                    likelihood = 'poisson')
+      tab[rows, columns] <- evaluation(materiality = 0.10, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.10, likelihood = 'poisson'))
   }
 }
 
@@ -86,8 +85,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-      tab[rows, columns] <- auditBF(materiality = 0.05, n = n[rows], x = k[columns], 
-                                    likelihood = 'poisson')
+      tab[rows, columns] <- evaluation(materiality = 0.05, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.05, likelihood = 'poisson'))
   }
 }
 
@@ -133,8 +131,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-      tab[rows, columns] <- auditBF(materiality = 0.02, n = n[rows], x = k[columns], 
-                                    likelihood = 'poisson')
+      tab[rows, columns] <- evaluation(materiality = 0.02, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.02, likelihood = 'poisson'))
   }
 }
 
@@ -175,8 +172,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-      tab[rows, columns] <- auditBF(materiality = 0.01, n = n[rows], x = k[columns], 
-                                    likelihood = 'poisson')
+      tab[rows, columns] <- evaluation(materiality = 0.01, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.01, likelihood = 'poisson'))
   }
 }
 
