--- a/vignettes/v7_bayes_factors_summary_statistics.Rmd
+++ b/vignettes/v7_bayes_factors_summary_statistics.Rmd
@@ -78,7 +78,7 @@ To calculate the Bayes factor the auditor must first specify the prior distribut
 
 ## Bayes factor after stage 1
 
-Using the `auditBF()` function the auditor can create the prior distribution and calculate the Bayes factor in favor of acceptance of the lot versus rejection of the lot. In this case, the Bayes factor in favor of acceptance ($BF_{-+}$) is 0.277 and represents only anecdotal evidence in favor of rejection (see also the vignette [Testing misstatement](https://koenderks.github.io/jfa/articles/v6_testing_misstatement.html)).
+Using the `evaluation()` function the auditor can create the prior distribution and calculate the Bayes factor in favor of acceptance of the lot versus rejection of the lot. In this case, the Bayes factor in favor of acceptance ($BF_{-+}$) is 0.277 and represents only anecdotal evidence in favor of rejection (see also the vignette [Testing misstatement](https://koenderks.github.io/jfa/articles/v6_testing_misstatement.html)).
 
 ```{r}
 evaluation(materiality = tolerance, x = 2, n = 32, prior = TRUE)
